--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "lint:fix": "eslint ./validationFunctions --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-<<<<<<< HEAD
-    "updateBusinessTypes": "node ./update-business-types.js && npm run format"
-=======
+    "updateBusinessTypes": "node ./update-business-types.js && npm run format",
     "jsdoc": "rm -rf ./docs/jsdoc && jsdoc -r ./validationFunctions -d ./docs/jsdoc"
->>>>>>> origin/master
   },
   "repository": {
     "type": "git",
