--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "jest": "^23.1.0",
-    "node-fetch": "^2.3.0",
+    "jest": "24.8.0",
     "jsdoc": "3.5.5",
+    "node-fetch": "^2.3.0",
     "prettier": "^1.13.5"
   }
 }
