--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@slice-and-dice/register-a-food-business-validation",
-  "version": "1.19.0",
+  "version": "1.20.0",
   "description": "Validation functions for the register a food business service",
   "main": "index.js",
   "scripts": {
     "format:verify": "prettier --list-different validationFunctions/**/*.js enums/**/*.js",
-    "format": "prettier --write validationFunctions/**/*.js enums/**/*.js",
+    "format": "prettier --write validationFunctions/**/*.js enums/**/*.js update-business-types.js",
     "lint": "eslint ./validationFunctions ./enums",
     "lint:fix": "eslint ./validationFunctions --fix",
     "test": "jest",
