--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,16 @@
 {
   "env": {
     "node": true,
-    "jest": true
+    "jest": true,
+    "es6": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2022
   },
   "rules": {
     "curly": "warn",
     "prettier/prettier": "warn"
   },
   "plugins": ["prettier"],
-  "extends": [
-    "eslint:recommended",
-    "prettier"
-  ]
+  "extends": ["eslint:recommended", "prettier"]
 }
