--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@slice-and-dice/register-a-food-business-validation",
-  "version": "1.22.5",
+  "version": "1.23.0",
   "description": "Validation functions for the register a food business service",
   "main": "index.js",
   "scripts": {
@@ -35,5 +35,29 @@
     "jsdoc": "^3.6.10",
     "node-fetch": "^3.2.6",
     "prettier": "^2.7.1"
-  }
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "semi": true
+  },
+  "eslintConfig": {
+    "env": {
+      "es2022": true
+    },
+    "rules": {
+      "prettier/prettier": "warn",
+      "no-param-reassign": [
+        2,
+        {
+          "props": true,
+          "ignorePropertyModificationsFor": [
+            "req"
+          ]
+        }
+      ]
+    },
+    "plugins": [
+      "prettier"
+    ]}
 }
