--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/slice-and-dice/register-a-food-business-validation#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "moment": "^2.29.3",
     "validator": "^13.7.0"
   },
@@ -33,7 +34,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
     "jsdoc": "^3.6.10",
-    "node-fetch": "^3.2.6",
     "prettier": "^2.7.1"
   },
   "prettier": {
@@ -59,5 +59,6 @@
     },
     "plugins": [
       "prettier"
-    ]}
+    ]
+  }
 }
